--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+.container{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  padding:40 px;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: blanchedalmond;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.button{
+  margin: 20px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn{
+  padding: 10px 20px;
+  margin: 8px;
+  font-size: 20px;
+  cursor: pointer;
+
+}
+
+.happy{
+
+  background-image: url("https://cdn.pixabay.com/photo/2022/01/11/19/43/avocado-6931344_1280.jpg");
+   background-repeat: no-repeat;       
+  background-size: cover;            
+  background-position: center center;
+}
+
+.sad{
+  background-image: url("https://cdn.pixabay.com/photo/2015/03/15/18/23/sad-674811_1280.jpg");
+  background-repeat: no-repeat;       
+  background-size: cover;            
+  background-position: center center;
+}
+
+.excited{
+  background-image: url("https://cdn.pixabay.com/photo/2015/06/24/06/45/background-819577_1280.jpg");
+  background-repeat: no-repeat;       
+  background-size: cover;            
+  background-position: center center;
+}
+
+.angry{
+  background-image: url("https://cdn.pixabay.com/photo/2019/10/01/16/56/crab-4518784_1280.png");
+  background-repeat: no-repeat;       
+  background-size: cover;            
+  background-position: center center;
 }
